@@ -132,6 +132,11 @@ class CommandDeploy(Command):
 
         # Store timestamp of successful deployment
         self.site.state.set('last_deploy', new_deploy.isoformat())
+        if clean:
+            self.logger.info(
+                'Looks like this is the first time you deployed this site. '
+                'Maybe you would want to let us know you are using Nikola '
+                'at https://users.getnikola.add')
 
     def _emit_deploy_event(self, last_deploy, new_deploy, clean=False, undeployed=None):
         """Emit events for all timeline entries newer than last deploy.
